# openmem

./: .gitignore  README.md  pyproject.toml
examples/: chatbot_with_memory.py  quickstart.py
src/openmem/: __init__.py  _ulid.py  _utils.py  client.py  config.py  models.py  types.py
src/openmem/capture/: __init__.py  engine.py  extractor.py  prompts.py
src/openmem/mcp/: __init__.py  __main__.py  providers.py  server.py  setup.py
src/openmem/recall/: __init__.py  engine.py  ranking.py  search.py
src/openmem/retention/: __init__.py  conflict.py  consolidation.py  decay.py  engine.py
src/openmem/storage/: __init__.py  cache_utils.py  sqlite_store.py  vector_cache.py
tests/: conftest.py  test_capture.py  test_client.py  test_coverage_gaps.py  test_mcp_server.py  test_recall.py  test_retention.py  test_review_fixes.py  test_setup.py  test_storage.py
