[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmem"
version = "0.1.0"
description = "The SQLite of AI memory — embedded, zero-dependency, lifecycle-aware."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Ashish Bhatia" },
]
keywords = ["ai", "memory", "agents", "llm", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mcp>=1.0.0",
]

[project.scripts]
openmem-mcp = "openmem.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
